  * debian/sysdeps/i386.mk: make /lib/i386-linux-gnu and /usr/lib/i386-linux-gnu
    symlinks relative.
  * debhelper.in/libnss-dns-udeb.install, debhelper.in/libnss-files-udeb.install: 
    fix the installation path.  (Closes: #370523)
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1583 (from glibc-bsd)
    to fix the build with gcc-4.1.

 -- Aurelien Jarno <aurel32@debian.org>  Sat,  3 Jun 2006 16:15:48 +0200

glibc (2.3.6-13) unstable; urgency=low

  * debian/patches/alpha/local-gcc4.1.diff: fix a small typo. sigh.
  * debian/control.in/main: build-depends on libc6-dev-s390x on s390.
  * Remove any/local-libgcc-static.diff.  (Closes: #369636, #369641)

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 31 May 2006 07:20:14 +0200

glibc (2.3.6-12) unstable; urgency=low

  * Don't do a udeb pass, it is still too buggy.  (Closes: #369492)
  * debian/control.in/main: build-depends on libc6-dev-sparc64 on sparc.
  * Add patches/alpha/local-gcc4.1.diff (fix build with gcc-4.1) from
    Falk Hueffner.
  * patches/kfreebsd/local-sysdeps.diff: update to revision 1571 (from
    glibc-bsd).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 30 May 2006 22:35:35 +0200

glibc (2.3.6-11) unstable; urgency=low

  [ Aurelien Jarno ]
  * debian/rules/build.mk: don't remove ld.so from udeb packages.
  * debian/rules: move udeb_add-ons to debian/sysdeps/{kfreebsd,linux}.mk.
  * M32R support:  (Closes: #366962)
    - debian/rules.d/control.mk: add m32r.
    - Add debian/sysdeps/m32r.mk.
    - Add debian/patches/any/cvs-futimes.diff (use fnctl64 if fnctl is no
      available).
    - Add debian/patch/any/local-kernel-features.diff (fix the include path
      for kernel-features.h) so that it could be used from other files.
    - Add debian/patches/any/local-libgcc-static.diff (link with libgcc_s).
    - Add debian/patches/m32r/local-ports-m32r.diff (m32r support).
    - Add debian/patches/m32r/cvs-elf-m32r_rel32.diff (Add R_M32R_REL32 to
      elf/elf.h).