@@ -1,7 +1,13 @@
 diff --exclude=CVS -upNr ports/ChangeLog.m32r ports/ChangeLog.m32r
 --- ports/ChangeLog.m32r	1970-01-01 09:00:00.000000000 +0900
 +++ ports/ChangeLog.m32r	2006-05-09 10:23:08.000000000 +0900
-@@ -0,0 +1,291 @@
+@@ -0,0 +1,297 @@
++2006-06-07  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>
++	* sysdeps/unix/sysv/linux/m32r/configure: Removed
++	  libc_cv_gcc_unwind_find=yes, because we provide _Unwind_Find_FDE 
++	  from libgcc.
++	* sysdeps/unix/sysv/linux/m32r/configure: Ditto.
++
 +2006-04-24  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>
 +	* sysdeps/m32r/setjmp.h : Avoid stdlib/isomac.out Error.
 +
@@ -3368,21 +3374,19 @@ diff --exclude=CVS -upNr ports/sysdeps/unix/sysv/linux/m32r/clone.S ports/sysdep
 diff --exclude=CVS -upNr ports/sysdeps/unix/sysv/linux/m32r/configure ports/sysdeps/unix/sysv/linux/m32r/configure
 --- ports/sysdeps/unix/sysv/linux/m32r/configure	1970-01-01 09:00:00.000000000 +0900
 +++ ports/sysdeps/unix/sysv/linux/m32r/configure	2005-10-31 17:17:34.000000000 +0900
-@@ -0,0 +1,6 @@
+@@ -0,0 +1,5 @@
 +# This file is generated from configure.in by Autoconf.  DO NOT EDIT!
 + # Local configure fragment for m32r/sysdeps/unix/sysv/linux/m32r
 +
 +arch_minimum_kernel=2.4.19
-+libc_cv_gcc_unwind_find_fde=yes
 +
 diff --exclude=CVS -upNr ports/sysdeps/unix/sysv/linux/m32r/configure.in ports/sysdeps/unix/sysv/linux/m32r/configure.in
 --- ports/sysdeps/unix/sysv/linux/m32r/configure.in	1970-01-01 09:00:00.000000000 +0900
 +++ ports/sysdeps/unix/sysv/linux/m32r/configure.in	2005-10-31 17:17:34.000000000 +0900
-@@ -0,0 +1,5 @@
+@@ -0,0 +1,4 @@
 +# Local configure fragment for m32r/sysdeps/unix/sysv/linux/m32r
 +
 +arch_minimum_kernel=2.4.19
-+libc_cv_gcc_unwind_find_fde=yes
 +
 diff --exclude=CVS -upNr ports/sysdeps/unix/sysv/linux/m32r/fchown.c ports/sysdeps/unix/sysv/linux/m32r/fchown.c
 --- ports/sysdeps/unix/sysv/linux/m32r/fchown.c	1970-01-01 09:00:00.000000000 +0900
