@@ -148,6 +148,8 @@ glibc (2.3.6-14) UNRELEASED; urgency=low
     fix the installation path.  (Closes: #370523)
   * patches/kfreebsd/local-sysdeps.diff: update to revision 1583 (from glibc-bsd)
     to fix the build with gcc-4.1.
+  * patches/m32r/local-ports-m32r.diff: remove libc_cv_gcc_unwind_find=yes
+    from m32r/configure by Kazuhiro Inaoka.  (Closes: #371052)
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat,  3 Jun 2006 16:15:48 +0200
 
